# swarmGPT

./: .gitattributes  .gitignore  CITATION.cff  LICENSE  README.md  mkdocs.yml  pixi.toml  pyproject.toml
.github/workflows/: ruff.yaml  website.yaml
docs/: about.md  axswarm.md  choreo.md  crazyflow.md  demos.md  getting_started.md  index.md
docs/media/: example_conversation.yaml
music/: clair_de_lune.LICENSE  vivaldi_summer.LICENSE  we_wish_you_a_merry_christmas_license.txt
swarm_gpt/: __init__.py  exception.py  launch.py
swarm_gpt/core/: __init__.py  backend.py  choreographer.py  drone_controller.py  motion_primitives.py  sim.py
swarm_gpt/data/: latex_eqn.yaml  motion_primitive_prompts.yaml  prompts.yaml  settings.yaml
swarm_gpt/data/presets/OutKast - Hey Ya! | 6 | 20250724_114032/: history.json  meta.json
swarm_gpt/ui/: __init__.py  ui.py
swarm_gpt/utils/: __init__.py  import_utils.py  music_manager.py  utils.py
tests/: conftest.py
tests/unit/: test_backend.py
